# VulkanGameEngine

./: .gitignore  .gitmodules  CMakeLists - Copy.txt  CMakeLists.txt  CMakePresets.json.txt  CMakeSettings.json  EngineConfig.json  GameController.h  GameSystem.h  ImGuiRenderer.cpp  ImGuiRenderer.h  InputSystem.cpp  InputSystem.h  Keyboard.h  LevelObjectPickerPipeline.json  Main.cpp  Mouse.h  NewFile  ObjectPickerRenderPass.json  README.md  SpriteInstanceWireFrameShaderFrag.spv  SpriteObjectPickerPipeline.json  VulkanGameEngine.sln  VulkanGameEngineCMake.txt
Android/: settings.gradle.kts
AssetCreatorDLL/: AssetCreatorDLL.vcxproj  AssetCreatorDLL.vcxproj.filters  AssetCreatorSystem.cpp  AssetCreatorSystem.h  pch.h
Assets/: AnimeGirlImportMaterial.json  FrameBufferShadervert.spv  GaussianBlurShader.frag  LevelWireFrameShader2D.frag  MegaManImportMaterial.json  SparkManTileSetImportMaterial.json  SpriteInstanceShader.frag  SpriteInstanceShader.vert  SpriteObjectPickerShader.vert  Test  imgui.ini
ComponentDLL/: Animation2D.h  CSharpScriptSystem.cpp  CSharpScriptSystem.h  Camera.cpp  Camera.h  Component.cpp  Component.h  ComponentBehavior.cpp  ComponentBehavior.h  ComponentDLL.vcxproj  ComponentDLL.vcxproj.filters  GameObject.cpp  GameObject.h  GameObjectBehavior.cpp  GameObjectBehavior.h  GameObjectSystem.cpp  GameObjectSystem.h  InputComponent.h  Level2D.cpp  Level2D.h  LevelSystem.cpp  LevelSystem.h  LuaScriptingSystem.cpp  LuaScriptingSystem.h  MegaManObject.cpp  MegaManObject.h  MegaManShot.cpp  MegaManShot.h  Sprite.cpp  Sprite.h  SpriteSystem.cpp  SpriteSystem.h  VRAM.cpp  VRAM.h  pch.h
GameScriptLibraryDLL/: Component.cs  ComponentRegistery.cs  DLLSystem.cs  Entity.cs  GameObjectStruct.cs  GameScriptLibraryDLL.csproj  Global.cs  IScript.cs  Input.cs  InputComponent.cs  KeyboardState.cs  ListPtr.cs  MemorySystem.cs  Player.cs  PlayerShot.cs  SpriteComponent.cs  Transform2DComponent.cs  Transform2d.cs
Levels/: TestLevel.json
MaterialBaker/: DLLSystem.cs  Form1.Designer.cs  Form1.cs  MaterialBaker.csproj  MaterialBakerSystem.cs  MaterialMemoryPoolSystem.cs  Program.cs
MaterialBakerDLL/: MaterialBakerDLL.vcxproj  MaterialBakerDLL.vcxproj.filters  MaterialBakerSystem.cpp  MaterialBakerSystem.h  MaterialMemoryPoolSystem.cpp  MaterialMemoryPoolSystem.h  TextureBakerSystem.cpp  TextureBakerSystem.h  TextureSamplers.cpp  TextureSamplers.h
Materials/: MegaManShotMaterial.json
NetworkingDLL/: NetworkSystem.cs  NetworkingDLL.csproj
Physics2D/: Physics2D.vcxproj
Physics2DDLL/: AABB.cpp  AABB.h  BoxCollider2D.cpp  BoxCollider2D.h  CircleCollider.h  Collider2D.cpp  Collider2D.h  IntersectionDetector2D.cpp  IntersectionDetector2D.h  Physics2DDLL.vcxproj  Physics2DDLL.vcxproj.filters  RigidBody.cpp  RigidBody.h  pch.h
Pipelines/: Default2DPipeline.json  DefaultPipeline.json  FrameBufferPipeline.json  GaussianBlurPipeline.json  LevelObjectPickerPipeline.json  LevelShader2DPipeline.json  LevelShader2DWireframePipeline.json  SpriteInstancePipeline.json  SpriteInstanceWireFramePipeline.json  SpriteObjectPickerPipeline.json
RenderPass/: BasicRenderPass.json  DefaultRenderPass.json  FrameBufferRenderPass.json  GaussianBlurRenderPass.json  LevelShader2DMultiSampledRenderPass.json  LevelShader2DRenderPass.json  LevelShader2DWireFrameRenderPass.json  ObjectPickerRenderPass.json  testJson.json
Shaders/: AssetCreatorShader.frag  AssetCreatorShader.vert  BRDFShader.frag  BRDFShader.vert  BindlessHelpers.glsl  BloomShader.frag  Constants.glsl  EnvironmentToCubeMap.frag  EnvironmentToCubeMapShader.frag  EnvironmentToCubeMapShader.vert  FrameBufferShader.frag  FrameBufferShader.vert  FrameBufferShaderFrag.spv  FrameBufferShaderVert.spv  GBufferLevelShader2D.frag  GBufferLevelShader2D.vert  GBufferLightingShader.frag  GBufferLightingShader.vert  GBufferSpriteInstanceShader.frag  GBufferSpriteInstanceShader.vert  GLSLShaderCompiler.bat  GameObjectPicker.frag  GameObjectPicker.vert  GaussianBlurShader.frag  GaussianBlurShader.vert  GeometryShader.frag  GeometryShader.vert  HdrShader.frag  HdrShader.vert  IrradianceShader.frag  IrradianceShader.vert  LevelDirectionalShadowShader.frag  LevelDirectionalShadowShader.vert  LevelObjectPickerShader2D.frag  LevelObjectPickerShader2D.vert  LevelObjectPickerShader2DFrag.spv  LevelObjectPickerShader2DVert.spv  LevelShader2D.frag  LevelShader2D.vert  LevelShader2DFrag.spv  (+43 more)
Textures/: MegaManShotTexture.json  SparkManTexture.json  TestTexture.json
VulkanEngineCore/: GameController.cpp  GameController.h  InputEnum.h  Keyboard.cpp  Keyboard.h  Mouse.h  Platform.cpp  Platform.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanDebugger.cpp  VulkanDebugger.h  VulkanDevice.cpp  VulkanDevice.h  VulkanEngineCore.vcxproj  VulkanEngineCore.vcxproj.filters  VulkanInstance.cpp  VulkanInstance.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanSystem.cpp  VulkanSystem.h  VulkanSystem2.cpp  VulkanSystem2.h  VulkanWindow.cpp  VulkanWindow.h
VulkanEngineDLL/: BufferSystem.cpp  BufferSystem.h  CFile.c  CFile.h  CHelper.cpp  CHelper.h  CSharpScriptSystem.cpp  CSharpScriptSystem.h  CVulkanRenderer.c  CVulkanRenderer.h  Camera.cpp  Camera.h  CameraSystem.cpp  CameraSystem.h  Collider2DComponent.h  CollisionSystem.cpp  CollisionSystem.h  ComponentSystem.cpp  ComponentSystem.h  DLL.h  DLLSystem.cpp  DLLSystem.h  DebugSystem.cpp  DebugSystem.h  ECSid.h  EngineConfigSystem.cpp  EngineConfigSystem.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  GLFWWindow.c  GLFWWindow.cpp  GLFWWindow.h  GPUSystem.cpp  GPUSystem.h  GameController.cpp  GameController.h  GameObjectSystem.cpp  GameObjectSystem.h  (+91 more)
VulkanGame/: GameSystem.cpp  GameSystem.h  ImGuiRenderer.cpp  Main.cpp  Tile.cpp  VulkanGame.vcxproj  VulkanGame.vcxproj.filters
VulkanGameEngine/: BufferSystem.cpp  BufferSystem.h  Camera.h  EngineConfigSystem.cpp  EngineConfigSystem.h  FrameBufferShaderfrag.spv  GLFWWindow.cpp  GLFWWindow.h  GameController.cpp  GameController.h  GameObjectSystem.cpp  GameObjectSystem.h  GameSystem.cpp  GameSystem.h  ImGuiRenderer.cpp  ImGuiRenderer.h  InputSystem.cpp  InputSystem.h  (+34 more)
(+583 files in other folders)
